@@ -9,6 +9,7 @@ version 1.7.7, in progress
   effects on exit
 - ordered probit/logit: fix for the case where the dependent
   variable does not form a continuous integer sequence
+- string-editing dialogs: ensure we have a cancel button
 
 7/30/2008 version 1.7.6
 - Fix bug: revise the way that list arguments to user-defined
